# PDF-Information-Retrieval-System

./: README.md  TODO.md  pyproject.toml  view.txt
data/: Sample 1.txt  Sample 2.txt  Sample 3.txt  Sample 4.txt  sample.txt
src/: CreateIndex.py  Preprocessing.py  Preprocessing.test.py  Queries.py  Server.py  TextExtraction.py  TextExtraction.test.py  Trie.py  Trie_test.py  extract.R  index.html
