[project]
name = "PDF IRS"
version = "1.0.0"
authors = [
  { name="Antonino Feitosa", email="antonino_feitosa@yahoo.com.br" },
]
description = "A simple PDF information retrieval system."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
